--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -411,7 +411,7 @@
                                 <LI><P>
                                     Avec LibreOffice Writer créez un document texte</P>
                                     <LI><P>
-                                        Reproduisez la page <A HREF="http://atoum.imag.fr/geta/User/didier.schwab/IUT/formatage.html"  target="blank"><I>Mon
+                                        Reproduisez la page <A HREF="formatage.html"  target="blank"><I>Mon
                                             petit formatage</I></A> de la partie précédente.</P>
                                         <LI><P>
                                             Enregistrez le document au format HTML, ouvrez le avec un navigateur.</P>
@@ -599,7 +599,7 @@ accueilIUT
                                                     Laissez de côté Weebly et revenez dans le système de fichier de
                                                     votre ordinateur.</LI>
                                                 <LI>Créez un répertoire (un dossier) appelé <I>test-CSS</I>.</LI>
-                                                <LI>Enregistrez <A HREF="http://atoum.imag.fr/geta/User/didier.schwab/IUT/test-css.html"> ce
+                                                <LI>Enregistrez <A HREF="Tests_CSS.html"> ce
                                                     fichier</A> dans le
                                                     répertoire puis ouvrez-le avec le bloc-note.</LI>
                                                 <LI>
