Modif adresse fichier htmlm

--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -411,7 +411,7 @@
                                 <LI><P>
                                     Avec LibreOffice Writer créez un document texte</P>
                                     <LI><P>
-                                        Reproduisez la page <A HREF="formatage.html"  target="blank"><I>Mon
+                                        Reproduisez la page <A HREF="petitFormattage.html"  target="blank"><I>Mon
                                             petit formatage</I></A> de la partie précédente.</P>
                                         <LI><P>
                                             Enregistrez le document au format HTML, ouvrez le avec un navigateur.</P>
