--- a/Tests_CSS.html
+++ b/Tests_CSS.html
@@ -1,6 +1,6 @@
 
 <!-- saved from url=(0062)http://atoum.imag.fr/geta/User/didier.schwab/IUT/test-css.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<html><head><meta http-equiv="Content-Type" content="text/html">
 		<title>Tests CSS</title>
   	<style type="text/css"></style></head>
 	<body>
