--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <BR/>
         <BR/>
         <H2>Cours 1 et 2 : <BR/> <A HREF="TD-Sites-Web.html">Création de Sites Web</A></H2>
-        <H2>Cours 3 : <BR/> <A HREF="Consignes-CE-Writer.html">Traitements de Texte avancé
+        <H2>Cours 3 : <BR/> <A HREF="Consignes-CE-Writer.htm">Traitements de Texte avancé
             </A></H2>
-        <H2>Cours 4 : <BR/> <A HREF="PAO.html">Publication Assistée par Ordinateur
+        <H2>Cours 4 : <BR/> <A HREF="PAO.htm">Publication Assistée par Ordinateur
             </A></H2>
         <H2>Cours 5 : <BR/> Projet</H2>
         
-        <H2><A HREF="consignes-evaluation.html">Consignes évaluation<A></H2>
+        <H2><A HREF="consignes-evaluation.htm">Consignes évaluation<A></H2>
         
         <H3>La charte graphique de ce site essaye de faciliter la lecture à l'écran (polices de caractères choisies, nombre de caractères par ligne, couleurs,...)</H3>
     </BODY>
