edicion site web y index

--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -438,7 +438,7 @@
                             Vous en utilisez un depuis que vous êtes à l'iut l'intratek.</P>
                             <UL>
                                         <LI><P>Connectez-vous
-                                            sur l'intranet et allez dans <I>enseignement&gt;informatique&gt;Web</I></P>
+                                            sur l' <A HREF="http://intratek-08.iut2.upmf-grenoble.fr/index.php" target="blank">intranet</A> et allez dans <I>enseignement&gt;informatique&gt;Web</I></P>
                                             <LI><P>
                                                 Créez une nouvelle page</P>
                                                 <LI><P>
