change index II

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <BR/>
         <BR/>
         <H2>Cours 1 et 2 : <BR/> <A HREF="TD-Sites-Web.html">Création de Sites Web</A></H2>
-        <H2>Cours 3 : <BR/> <A HREF="Consignes-CE-Writer">Traitements de Texte avancé
+        <H2>Cours 3 : <BR/> <A HREF="Consignes-CE-Write">Traitements de Texte avancé
             </A></H2>
-        <H2>Cours 4 : <BR/> <A HREF="PAO">Publication Assistée par Ordinateur
+        <H2>Cours 4 : <BR/> <A HREF="PA">Publication Assistée par Ordinateur
             </A></H2>
         <H2>Cours 5 : <BR/> Projet</H2>
         
