--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <Subtitle>Techniques de commercialisation<BR/>
             IUT2-Grenoble
         </Subtitle>
-       
+        <Subtitle>
             2017-2018<BR/></Subtitle>
         <BR/>
         <BR/>
