--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </HEAD>
     <BODY LANG="fr-FR" DIR="LTR">
         <Title>Informatique
-            semestre 4</Title>
+           </Title>
         <Subtitle>Techniques de commercialisation<BR/>
             IUT2-Grenoble
         </Subtitle>
