mise à jour consignes evaluation

--- a/consignes-evaluation.html
+++ b/consignes-evaluation.html
@@ -2,18 +2,18 @@
 <HTML>
     <HEAD>
         <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=utf-8">
-            <TITLE>Consignes évaluation 2016-2017</TITLE>
+            <TITLE>Consignes évaluation 2017-2018</TITLE>
             <link type="text/css" rel="stylesheet" href="style-cours-TC-IUT2.css" />
     </HEAD>
     <BODY>
-        <TITLE>Consignes évaluation 2016-2017</TITLE>
+        <TITLE>Consignes évaluation 2017-2018</TITLE>
         <P> Vous devez
-            réaliser un site Web sur la plateforme <A HREF="http://www.weebly.com/" target="blank">Weebly</A>
+            réaliser INDIVIDUELMENT un site Web sur la plateforme <A HREF="http://www.weebly.com/" target="blank">Weebly</A>
             ainsi qu'un dépliant réalisé avec LibreOffice Writer.</P>
         <P>Les deux
             concerneront une entreprise fictive</p>
 		<P>Nous vous rappelons que les lois françaises s'appliquent et que vous seul êtes responsable du contenu de votre site.<P>
-	<P>Les soutenances se dérouleront la semaine en mars. Les convocations sont sur <A HREF="http://intratek-08.iut2.upmf-grenoble.fr/index.php?action=lire&id=6562" target = "blank" >l'intratek.</A></P>
+	<P>Les convocations sont sur <A HREF="http://intratek-08.iut2.upmf-grenoble.fr/index.php?action=lire&id=6562" target = "blank" >l'intratek.</A></P>
         <P> Vous devrez nous rendre :</P>
         <UL>
             <UL>
