correction fichier .html

--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -442,7 +442,7 @@
                                             <LI><P>
                                                 Créez une nouvelle page</P>
                                                 <LI><P>
-                                                    Dans le formulaire, mettez un titre à votre page (<A HREF="formatage.html" target="blank"><I>Mon
+                                                    Dans le formulaire, mettez un titre à votre page (<A HREF="petitFormattage.html" target="blank"><I>Mon
                                                         petit formatage</I></A>)</P>
                                                     <LI><P>
                                                         Observer les différents menus dans la barre et formatez votre page
