--- a/consignes-evaluation.html
+++ b/consignes-evaluation.html
@@ -8,7 +8,7 @@
     <BODY>
         <TITLE>Consignes évaluation 2017-2018</TITLE>
         <P> Vous devez
-            réaliser INDIVIDUELMENT un site Web sur la plateforme <A HREF="http://www.weebly.com/" target="blank">Weebly</A>
+            réaliser INDIVIDUELLEMENT un site Web sur la plateforme <A HREF="http://www.weebly.com/" target="blank">Weebly</A>
             ainsi qu'un dépliant réalisé avec LibreOffice Writer.</P>
         <P>Les deux
             concerneront une entreprise fictive</p>
