modifications bloc de notes et indications de balises

--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -77,11 +77,9 @@
         <P>Le Web est constitué de pages. Que sont ces pages ?</P>
 
         <UL>
-            <LI>Ouvrez un
-                traitement de texte relativement simple (le bloc note par exemple)
+            <LI>Ouvrez le bloc note 
                 <LI>Recopiez le
-                    texte suivant (les sauts de ligne, les tabulations sont
-                    optionnelles) :
+                    texte suivant :
                     </UL>
         <!--<P STYLE="margin-left: 2cm; margin-right: 1cm; margin-top: 0.2cm; margin-bottom: 0.2cm; background: transparent; border: 1px solid #000000; padding: 0.05cm; widows: 2; orphans: 2; page-break-before: auto"><A NAME="line1"></A>
          <FONT COLOR="#808080"><FONT FACE="Arial, sans-serif"><FONT SIZE=2>&lt;html&gt;<BR>	&lt;head&gt;<BR>		&lt;title&gt;Ma
@@ -92,7 +90,7 @@
 
             <UL>
                 <LI>Enregistrez
-                    le document au format texte (.txt) mais donnez l'extension .html.
+                    le document mais donnez l'extension .html au lieu de .txt
                     Appellez-le <I>Bonjour.html</I></LI>
                 <LI>Ouvrez-le avec le navigateur Web Mozilla Firefox. Vous devriez obtenir une page dont le titre est <I>Ma première page Web</I>
                     et qui affiche <I>Bonjour le monde</I>.</LI>
@@ -256,7 +254,7 @@
 
                     <UL>
                         <LI><P CLASS="puce-1-western" STYLE="text-indent: 0cm; font-style: normal">
-                            Modifiez le corps de votre page pour rajouter des titres</P>
+                            Modifiez le corps de votre page pour rajouter des titres. Les titres se placent dans &lt;body&gt;  </P>
                             </UL>
 
                     <!--<P STYLE="margin-left: 2cm; margin-right: 1cm; margin-top: 0.2cm; margin-bottom: 0.2cm; background: transparent; border: 1px solid #000000; padding: 0.05cm; font-style: normal; widows: 2; orphans: 2; page-break-before: auto">
