--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -319,7 +319,11 @@
                             <puce>la police avec l'attribut <I>face
                             </I>(par ex. <I>&lt;font
                                 face = &quot;Comic Sans MS&quot;&gt;</I>)</puce>
+			    <puce>Pour utiliser plusieurs attributs dans une seule valise comme &lt;font&gt;, on fait &lt;font size = &quot;5&quot;&gt; face = &quot;Comic Sans MS&quot;&gt; font color = &quot;white&quot;&gt; </puce>
                         </puce>
+<puce>La balise qui ferme n'a pas des attributs. Dans l'exemple précedent,<I> &lt;/font&gt;</I> reste égal même s'il y a trois attributs dans la balise
+
+</puce>
                         <PUCE>pour les paragraphes (<I>&lt;p&gt;</I>),
                             il est possible de modifier l'alignement avec <I>align</I>
                             (<I>left</I>, <I>right</I>,
@@ -330,6 +334,10 @@
                             (&lt;body&gt;), la couleur du fond peut être modifiée grâce à
                             l'attribut <I>bgcolor</I>
                             (par ex. <I>&lt;body bgcolor=&quot;white&quot;&gt;</I>)</puce>
+			<puce>
+			     pour utiliser plusieurs balises qui affectent un seul texte, il faut faire : 
+			     &lt;p align=&quot;left&quot;&gt;&lt;p align=&quot;left&quot;&gt;&lt;p align=&quot;left&quot;&gt;texte&lt;p align=&quot;left&quot;&gt;&lt;p align=&quot;left&quot;&gt;&lt;p align=&quot;left&quot;&gt;
+			</puce>
 
                         <UL>
                             <LI><P>Réalisez la
