--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -79,7 +79,7 @@
         <UL>
             <LI>Ouvrez le bloc note 
                 <LI>Recopiez le
-                    texte suivant :
+                    texte suivant (retours à la ligne et tabulations inclus) :
                     </UL>
         <!--<P STYLE="margin-left: 2cm; margin-right: 1cm; margin-top: 0.2cm; margin-bottom: 0.2cm; background: transparent; border: 1px solid #000000; padding: 0.05cm; widows: 2; orphans: 2; page-break-before: auto"><A NAME="line1"></A>
          <FONT COLOR="#808080"><FONT FACE="Arial, sans-serif"><FONT SIZE=2>&lt;html&gt;<BR>	&lt;head&gt;<BR>		&lt;title&gt;Ma
@@ -319,9 +319,9 @@
                             <puce>la police avec l'attribut <I>face
                             </I>(par ex. <I>&lt;font
                                 face = &quot;Comic Sans MS&quot;&gt;</I>)</puce>
-			    <puce>Pour utiliser plusieurs attributs dans une seule valise comme &lt;font&gt;, on fait &lt;font size = &quot;5&quot;&gt; face = &quot;Comic Sans MS&quot;&gt; font color = &quot;white&quot;&gt; </puce>
+			    <puce>Pour utiliser plusieurs attributs appartenant à une même balise comme &lt;font&gt;, on fait &lt;font size = &quot;5&quot; face = &quot;Comic Sans MS&quot; color = &quot;white&quot;&gt; </puce>
                         </puce>
-<puce>La balise qui ferme n'a pas des attributs. Dans l'exemple précedent,<I> &lt;/font&gt;</I> reste égal même s'il y a trois attributs dans la balise
+<puce>La balise qui ferme n'a pas des attributs. Dans l'exemple précedent,<I> &lt;/font&gt;</I> reste égal même s'il y a trois attributs 
 
 </puce>
                         <PUCE>pour les paragraphes (<I>&lt;p&gt;</I>),
@@ -336,13 +336,12 @@
                             (par ex. <I>&lt;body bgcolor=&quot;white&quot;&gt;</I>)</puce>
 			<puce>
 			     pour utiliser plusieurs balises qui affectent un seul texte, il faut faire : 
-			     &lt;p align=&quot;left&quot;&gt;&lt;p align=&quot;left&quot;&gt;&lt;p align=&quot;left&quot;&gt;texte&lt;p align=&quot;left&quot;&gt;&lt;p align=&quot;left&quot;&gt;&lt;p align=&quot;left&quot;&gt;
+			     &lt;a&gt;&lt;b&gt;&lt;c&gt;texte&lt;/c&gt;&lt;/b&gt;&lt;/a&gt;
 			</puce>
 
                         <UL>
                             <LI><P>Réalisez la
-                                page suivante en utilisant des balises de paragraphe et pas des
-                                titres</P>
+                                page suivante en utilisant des balises de paragraphe </P>
                                 </UL>
                         <p>
                         <IMG SRC="TD-Sites-Web_html_4dd56cb4.gif" NAME="images1" ALIGN=CENTER WIDTH=77% WIDTH=100% BORDER=0></p>
