--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -319,7 +319,7 @@
                             <puce>la police avec l'attribut <I>face
                             </I>(par ex. <I>&lt;font
                                 face = &quot;Comic Sans MS&quot;&gt;</I>)</puce>
-			    <puce>Pour utiliser plusieurs attributs appartenant à une même balise comme &lt;font&gt;, on fait &lt;font size = &quot;5&quot; face = &quot;Comic Sans MS&quot; color = &quot;white&quot;&gt; </puce>
+			    <puce>Pour utiliser plusieurs attributs appartenant à une même balise comme &lt;font&gt;, on fait &lt;font size = &quot;5&quot; face = &quot;Comic Sans MS&quot; color = &quot;white&quot;&gt; texte&lt;/font&gt;</puce>
                         </puce>
 <puce>La balise qui ferme n'a pas des attributs. Dans l'exemple précedent,<I> &lt;/font&gt;</I> reste égal même s'il y a trois attributs 
 
@@ -335,9 +335,10 @@
                             l'attribut <I>bgcolor</I>
                             (par ex. <I>&lt;body bgcolor=&quot;white&quot;&gt;</I>)</puce>
 			<puce>
-			     pour utiliser plusieurs balises qui affectent un seul texte, il faut faire : 
-			     &lt;a&gt;&lt;b&gt;&lt;c&gt;texte&lt;/c&gt;&lt;/b&gt;&lt;/a&gt;
-			</puce>
+			     pour utiliser plusieurs balises qui affectent un seul texte au même temps, il faut faire : 
+			     &lt;a&gt;&lt;b&gt;&lt;c&gt;texte&lt;/c&gt;&lt;/b&gt;&lt;/a&gt;. Par exemple : 
+&lt;H1&gt;&lt;font&gt;texte&lt;/font&gt;&lt;/H1&gt;
+		</puce>
 
                         <UL>
                             <LI><P>Réalisez la
