--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -705,13 +705,30 @@
                                                         correctement.</P>
 
                                                         </div>
-                                                        <UL>
-                                                            <LI>Rajouter à gauche la photo de
-                                                                Victor Hugo que l'on trouve sur le site de Wikipedia. Elle doit
-                                                                rester au même endroit de la fenêtre même si on fait défiler le
-                                                                poème.</LI>
+                                                       
                                                         </UL>
+						    <H1>Exercices</H1>
+<H2>Exercice 1</H2>
 
+<UL>
+                                                    <LI>Ouvrez le bloc de notes</LI>
+						    <LI>Créez un nouveau ficher nommé "exercice1.html"</LI>
+						    <LI>Recopiez la structure de la page web montrée au début de ce TP (tabulation et expaces inclus)</LI>
+						    <LI>Avec l'aide de la liste de balises utilisée avant, réalisez la page suivante dans "exercise 1.html" :  </LI></BR>
+<IMG SRC="exo1.png" NAME="images3" ALIGN=CENTER WIDTH=80% BORDER=1>
+<LI>Créez le fichier "exercise1.css" et modifie le style de la page (police, coulor de texte et des titres, arrière-plan) </LI>
+</UL>
+<H2>Exercice 2</H2>
+
+<UL>
+                                                    <LI>Ouvrez le bloc de notes</LI>
+						    <LI>Créez un nouveau ficher nommé "exercice2.html"</LI>
+						    <LI>Recopiez encore une fois la structure de la page web montrée au début de ce TP (tabulation et expaces inclus)</LI> 
+						    <LI>Avec l'aide de la liste de balises utilisée avant, réalisez la page suivante dans "exercise2.html" en suivant les indications trouvés dans l'image : </LI> </BR>
+ <IMG SRC="exo2.png" NAME="images3" ALIGN=CENTER BORDER=1>
+
+<LI>Créez le fichier "exercise2.css" et modifie le style de la page (police, coulor de texte et des titres, arrière-plan, comme vous avez fait dans l'exercise précedent) </LI>
+                                                </UL>
 
                                                     <H1>Les CSS dans Weebly</H1>
                                                     <UL>
@@ -721,17 +738,16 @@
                                                         professionnelle. En effet, le site Web d'une entreprise doit
                                                         refléter son identité graphique. Il va ainsi falloir que nous
                                                         modifions les CSS de notre site pour obtenir le résultat attendu.</P>
-                                                        <LI>Dans Weebly, en mode édition
-                                                            du site, onglet <I>conception</I>
+                                                        <LI>Revenez sur le site que vous avez crée
+							<LI>En mode édition
+                                                            du site, cliquez sur l'onglet <I>Thème</I>
                                                             <LI>Cliquez sur<I>
-                                                                Modifier HTML/CSS</I></LI>
-                                                            <LI>Modifiez
-                                                                la CSS de telle sorte que l'image que l'on trouve <A HREF="http://static2.grsites.com/archive/textures/water/water020.gif" target="blank">ici</A>
-                                                                se répète dans le fond de la page.
+                                                                Editer HTML/CSS</I></LI>
+                                                            <LI>Cliquez sur "main.less" et cherchez sur le code les indications "Text and type". Avec l'aide de <A HREF="http://goulvench.free.fr/vrac/CSS.html">  cette page de références</A> explorez et modifiez les valeurs mis par défault sur votre site. 
                                                             </LI>
                                                             </UL>
 
-                                                    C'est beau non ?
+                                               
 
                                                     <div class="visu">
                                                         <H3>En savoir plus</H3>
