Changement Arial Black > Arial

--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -682,7 +682,7 @@
                                                     <p>En sachant que</P>
                                                     <UL>
                                                         <LI>le titre <I>H1</I>
-                                                            est écrit en <I>Arial Black</I>
+                                                            est écrit en <I>Arial</I>
                                                             et dans la plus grande taille de fonte</LI>
                                                         <LI>le titre <I>H2 </I> est
                                                             écrit en fonte de taille moyenne</LI>
