--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -682,12 +682,13 @@
                                                     <p>En sachant que</P>
                                                     <UL>
                                                         <LI>le titre <I>H1</I>
-                                                            est écrit en <I>Arial</I>
+                                                            est écrit en <I>Arial</I>, en gras, centrée
                                                             et dans la plus grande taille de fonte</LI>
                                                         <LI>le titre <I>H2 </I> est
-                                                            écrit en fonte de taille moyenne</LI>
-                                                        <LI>l'espace entre deux paragraphes
-                                                            vaut une demi-taille de ligne.</LI>
+																				est écrit en <I>Arial</I>, centrée
+                                                            et en taille de police moyenne</LI>
+                                                        <LI>le reste du texte est est écrit en <I>Arial</I>, italique,centrée, et en taille de police petite et l'espace entre deux paragraphes vaut une demi-taille de ligne (line-height: 150%).</LI>
+																			<LI>le body de la page est cyan </LI>
                                                     </UL>
 
                                                     <IMG SRC="TD-Sites-Web_html_f39c458.gif" NAME="images12" ALIGN=CENTER WIDTH=100% BORDER=0/>
