--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -683,11 +683,11 @@
                                                     <UL>
                                                         <LI>le titre <I>H1</I>
                                                             est écrit en <I>Arial</I>, en gras, centrée
-                                                            et dans la plus grande taille de fonte</LI>
+                                                            et dans la plus grande taille de police</LI>
                                                         <LI>le titre <I>H2 </I> est
 																				est écrit en <I>Arial</I>, centrée
                                                             et en taille de police moyenne</LI>
-                                                        <LI>le reste du texte est est écrit en <I>Arial</I>, italique,centrée, et en taille de police petite et l'espace entre deux paragraphes vaut une demi-taille de ligne (line-height: 150%).</LI>
+                                                        <LI>le reste du texte est est écrit en <I>Arial</I>, italique,centrée, et en taille de police petite et l'espace entre deux paragraphes vaut une demi-taille de ligne (line-height: 50%).</LI>
 																			<LI>le body de la page est cyan </LI>
                                                     </UL>
 
