--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -682,13 +682,13 @@
                                                     <p>En sachant que</P>
                                                     <UL>
                                                         <LI>le titre <I>H1</I>
-                                                            est écrit en <I>Arial</I>, en gras, centrée
+                                                            est écrit en <I>Arial</I>, en gras, centré
                                                             et dans la plus grande taille de police</LI>
                                                         <LI>le titre <I>H2 </I> est
-																				est écrit en <I>Arial</I>, centrée
+																				est écrit en <I>Arial</I>, centré, les caractères sont en petites capitales
                                                             et en taille de police moyenne</LI>
-                                                        <LI>le reste du texte est est écrit en <I>Arial</I>, italique,centrée, et en taille de police petite et l'espace entre deux paragraphes vaut une demi-taille de ligne (line-height: 50%).</LI>
-																			<LI>le body de la page est cyan </LI>
+                                                        <LI>le reste du texte est est écrit en <I>Arial</I>, italique,centré, et en taille de police petite et l'espace entre deux paragraphes vaut une demi-taille de ligne (line-height: 50%).</LI>
+																			<LI>le body de la page est "SkyBlue" </LI>
                                                     </UL>
 
                                                     <IMG SRC="TD-Sites-Web_html_f39c458.gif" NAME="images12" ALIGN=CENTER WIDTH=100% BORDER=0/>
