Ajoute des indications pour éditer le site web

--- a/consignes-evaluation.html
+++ b/consignes-evaluation.html
@@ -72,6 +72,8 @@
 	<LI>Aller sur "Theme" et cliquer sur "Edition HTML/CSS"</LI>
 </UL>
 
+<P>Pour savoir ce qu'on veut modifier dans votre site:</P>
+
  <UL>
 	<LI>Aller sur le site que vous êtes en train de créer (Cliquer sur "Publier" pour obtenir le lien)</LI>
 	<LI>Cliquer avec le bouton droit de la souris et séléctionner l'option "Examiner l'élément"</LI>
