Edition des consignes d'évaluation + Correction PAO.html

--- a/PAO.html
+++ b/PAO.html
@@ -82,8 +82,7 @@
                 le logiciel de dessin de la suite LibreOffice
             </LI>
             <LI>Réalisez ce dessin en
-                sachant que les liens sont des connecteurs et font 0,1 cm de
-                largeur.</LI>
+                sachant que les liens sont des connecteurs</LI>
             <IMG SRC="PAO_html_m333e340f.gif"/>
             <LI>Enregistrez
                 votre fichier au format natif de <I>Draw</I>,
@@ -230,14 +229,14 @@
         de la PAO, et sont suffisants dans le cadre d'un travail amateur,
         voire semi-professionnel et bien entendu pour apprendre.</P>
         <H2>Définir des zones dans son document
-            : exemple avec Libo Writer</H2>
+            : exemple avec Libre Office Writer</H2>
         <P>
         Dans le cadre de la mise en page d'un document, il faut définir les
         zones où apparaît le contenu. On va définir des zones pour le
         texte, des zones pour les images, zones que l'on pourra ensuite
         déplacer, réordonner, <I>etc</I>.</P>
         <P>
-        Pour créer des zones de texte dans Libo Writer, il faut utiliser
+        Pour créer des zones de texte dans Libre Office Writer, il faut utiliser
         des cadres de texte (<I>Menu Insertion &gt; Cadre</I>). Les 3
         propriétés essentielles d'un cadre sont :</P>
         <UL>
@@ -295,9 +294,9 @@
             Nous allons réaliser une plaquette avec Libo Writer. Il aura 3 volets
             rabattus l'un sur l'autre. En pratique, il s'agit d'une feuille (A4)
             pliée en 3, comme sur l'illustration. Une feuille A4 a comme
-            dimension, 297 mm dans le sens le plus long et 210 mm dans le sens le
+            dimension, 29,7 cm dans le sens le plus long et 21 cm dans le sens le
             plus court. Ces 3 volets ont tous les deux faces, ce qui fait au
-            total 6 zones (chacune mesurant donc 99 mm :</P>
+            total 6 zones (chacune mesurant 21 cm x 9,9 cm) :</P>
             <P>
             <IMG SRC="Mise-en-page-depliant.gif" width=100%>
                 <UL>
