--- a/consignes-evaluation.html
+++ b/consignes-evaluation.html
@@ -7,7 +7,30 @@
     </HEAD>
     <BODY>
         <TITLE>Consignes évaluation 2017-2018</TITLE>
-      
+
+<H1>Dates d'évaluation </H1>
+
+  <UL>
+		<LI> TC21A : Mercredi 29/11, 13h-15h, DG-S33
+		<LI> TC21B : Mardi 28/11, 13h-15h, Salle à définir
+		<p> </p>
+		<LI> TC22A : Mardi 28/11, 15h-17h, DG-S34
+		<LI> TC22B : Mardi 28/11, 10h-12h, DG-023, DG-020
+		<p> </p>
+		<LI> TC23A : Vendredi 01/12, 15h-17h, DG-S37
+		<LI> TC23B : Vendredi 01/12, 13h-15h, DG-S37
+		<p> </p>
+		<LI> TC24A : Lundi 27/11, 13h-15h, DG-023, DG-020
+		<LI> TC24B : Lundi 27/11, 15h-17h, DG-023, DG-020
+		<p> </p>
+		<LI> TC25A : Mercredi 29/11, 08h-10h, DG-023, DG-020
+		<LI> TC25B : Mercredi 29/11, 10h-12h, DG-023, DG-020
+	</UL>
+		
+<p> L'heure de convocation individuelle se trouve sur Chamilo ("TC CI2 - Technologie de l'Information et de la Communication 3" > "Documents"  > "Convocations Évaluation Site Web TC21, TC22, TC23, TC24 et TC25") Merci de vérifier si votre nom se trouve dans la liste correspondante. </p>
+
+<p> Pour info : la note de ce cours appartient au S4.
+
 <H1>Evaluation du site web </H1>
 
         <P>Vous devrez vous présenter le site web que vous avez crée (env. 7 min par personne, les convocations seront indiquées plus tard sur <A HREF="http://intratek-08.iut2.upmf-grenoble.fr/index.php?action=lire&id=6562" target = "blank" >l'intratek.</A>). Vous allez :
