changement consignes évaluation

--- a/consignes-evaluation.html
+++ b/consignes-evaluation.html
@@ -29,11 +29,13 @@
 		
 <p> L'heure de convocation individuelle se trouve sur Chamilo ("TC CI2 - Technologie de l'Information et de la Communication 3" > "Documents"  > "Convocations Évaluation Site Web TC21, TC22, TC23, TC24 et TC25") Merci de vérifier si votre nom se trouve dans la liste correspondante. </p>
 
+
+
 <p> Pour info : la note de ce cours appartient au S4.
 
 <H1>Evaluation du site web </H1>
 
-        <P>Vous devrez vous présenter le site web que vous avez crée (env. 7 min par personne, les convocations seront indiquées plus tard sur <A HREF="http://intratek-08.iut2.upmf-grenoble.fr/index.php?action=lire&id=6562" target = "blank" >l'intratek.</A>). Vous allez :
+        <P>Vous devrez vous présenter le site web que vous avez crée + le dépliant (env. 7 min par personne, en indiquant de quoi s'agit votre site, les pages qu'elle contient, les changements CSS que vous avez fait et le contenu du dépliant). Vous allez :
 
  <UL>
 		<LI><P><B>Présenter le site web fini</B> </P></LI>
@@ -48,8 +50,7 @@
                             Web grâce en particulier à des captures d'écran lisibles type avant/après ainsi que <B>la conception de votre dépliant</B> (objectifs des supports, conception pratique, difficultés, …). (Cf. "Cours 4") </P></LI>
 		<LI><P><B>Le dépliant sur papier qui permettra de présenter l'enterprise montrée dans votre site web</b> (Cours 3, Prochain TD)</P>
                     <LI><P><b>Le
-                        dépliant aux formats odt et pdf</b> qui seront déposés sur
-                        l'intranet suivant la procédure habituelle (rappelée <A HREF="http://intratek-08.iut2.upmf-grenoble.fr/index2.php?special=fichier_page_inline&amp;id=4896" target = "blank">ici</A>)</P>
+                        dépliant aux formats odt et pdf</b>  Le dépôt de documents sera fait aussi sur Chamilo le jour que vous avez présenté votre site ("TC CI2 - Technologie de l'Information et de la Communication 3" > "Travaux"  > Séléctionner le groupe et la section à laquelle vous appartient), et avant minuit, (example le groupe TC21A doit le rendre le mercredi 29/11, le TC21B le mardi 28/11, etc.)</P>
                      
                             </UL>
 
