--- a/consignes-evaluation.html
+++ b/consignes-evaluation.html
@@ -52,7 +52,7 @@
                     
 <H2>Dêpot de documents sur Chamilo </H2>
 
-<P><b>Il y a 4 documents à déposer sur Chamilo : le dossier de conception (format .pdf et .odt, si pour le dossier vous avez travaillez sur Word, vous pouvez télécharger le fichier .doc aussi, pas de problème) + dépliant (format .pdf et .odt) </b>  Le dêpoit sera fait le jour que vous avez présenté votre site ("TC CI2 - Technologie de l'Information et de la Communication 3" > "Travaux"  > Séléctionner le groupe et la section à laquelle vous appartient), et avant minuit, (example le groupe TC21A doit le rendre le mercredi 29/11, le TC21B le mardi 28/11, etc.) </P>
+<P><b>Il y a 4 documents à déposer sur Chamilo : le dossier de conception (format .pdf et .odt, si pour le dossier vous avez travaillé sur Word, vous pouvez télécharger le fichier .doc aussi, pas de problème) + dépliant (format .pdf et .odt) </b>  Le dêpoit sera fait le jour que vous avez présenté votre site ("TC CI2 - Technologie de l'Information et de la Communication 3" > "Travaux"  > Séléctionner le groupe et la section à laquelle vous appartient), et avant minuit, (example le groupe TC21A doit le rendre le mercredi 29/11, le TC21B le mardi 28/11, etc.) </P>
                      
                             </UL>
 
