--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -141,25 +141,23 @@
                 <div class="visu">
                     <H3>En savoir plus</H3>
                     <P>
-                    En Décembre 2011, les 5 navigateurs Web les plus utilisés sont
-                    (<A HREF="http://gs.statcounter.com/#browser-ww-monthly-201012-201012-bar" target="blank">source</A>)
+                    En septembre 2018, les 5 navigateurs Web les plus utilisés sont
+                    (<A HREF="http://gs.statcounter.com/browser-market-share/desktop-tablet-console/worldwide/#monthly-201809-201809-bar" target="blank">source</A>)
                     :</P>
                     <P>
-                    <A HREF="http://www.opera.com/browser/" target="blank"><IMG SRC="TD-Sites-Web_html_6571fb3.gif" NAME="HTTP://WWW.OPERA.COM/BROWSER/" ALIGN=LEFT WIDTH=5% BORDER=0></A> Opera
-                    11 (part de marché 2%)</P>
                     <P>
                     <A HREF="http://www.apple.com/fr/safari/" target="blank"><IMG SRC="TD-Sites-Web_html_503981f7.png" NAME="HTTP://WWW.APPLE.COM/FR/SAFARI/"  ALIGN=LEFT WIDTH=5% BORDER=0></A>Apple
-                    Safari 5 (pdm 6%)</P>
+                    Safari (pdm 10,46%)</P>
                     <P>
                     <A HREF="http://www.mozilla-europe.org/fr/firefox/" target="blank"><IMG SRC="TD-Sites-Web_html_675359c5.png" NAME="HTTP://WWW.MOZILLA-EUROPE.ORG/FR/FIREFOX/"  ALIGN=LEFT WIDTH=5% BORDER=0></A>Mozilla
                     Firefox 9, libre, gratuit et multiplateforme (pdm 25%)</P>
                     <P><A HREF="https://www.google.com/chrome/" target="blank"><IMG SRC="TD-Sites-Web_html_m33457f86.gif" NAME="HTTP://WWW.GOOGLE.COM/CHROME"  ALIGN=LEFT WIDTH=5% BORDER=0></A>Google
-                    Chrome 16 (pdm 28%)</P>
+                    Chrome (pdm 63%)</P>
                     <p>
                     <A HREF="http://www.microsoft.com/france/windows/internet-explorer/telecharger-ie9.aspx" target="blank"><IMG SRC="TD-Sites-Web_html_25e46ee4.png" NAME="HTTP://WWW.MICROSOFT.COM/FRANCE/WINDOWS/INTERNET-EXPLORER/TELECHARGER-IE8.ASPX"  ALIGN=LEFT WIDTH=5% BORDER=0></A>Microsoft
                     Windows Internet Explorer 8 qui est <A HREF="http://www.clubic.com/article-282232-1-comparatif-internet-explorer-firefox-opera-safari.html" target="blank">actuellement
-                        le plus mauvais</A> et le plus utilisé des navigateurs (pdm 39% pic
-                    à 95% en 2002-2003)</P>
+                        le plus mauvais</A> et a été longtemps le plus utilisé des navigateurs (pdm 6,35% pic
+                    à 95% en 2002-2003). Il est aujourd'hui remplacé par Edge (pdm 4%).</P>
                     <P>
                     Une répartition différente sur dispositif mobiles (<A HREF="http://gs.statcounter.com/#mobile_browser-ww-monthly-201112-201112-bar" target="blank">source</A>)</P>
                     <P>
