--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -144,13 +144,13 @@
                     En septembre 2018, les 5 navigateurs Web les plus utilisés sont
                     (<A HREF="http://gs.statcounter.com/browser-market-share/desktop-tablet-console/worldwide/#monthly-201809-201809-bar" target="blank">source</A>)
                     :</P>
-                    <P>
+                    <P/>
                     <P>
                     <A HREF="http://www.apple.com/fr/safari/" target="blank"><IMG SRC="TD-Sites-Web_html_503981f7.png" NAME="HTTP://WWW.APPLE.COM/FR/SAFARI/"  ALIGN=LEFT WIDTH=5% BORDER=0></A>Apple
-                    Safari (pdm 10,46%)</P>
+                    Safari (pdm 10%)</P>
                     <P>
                     <A HREF="http://www.mozilla-europe.org/fr/firefox/" target="blank"><IMG SRC="TD-Sites-Web_html_675359c5.png" NAME="HTTP://WWW.MOZILLA-EUROPE.ORG/FR/FIREFOX/"  ALIGN=LEFT WIDTH=5% BORDER=0></A>Mozilla
-                    Firefox 9, libre, gratuit et multiplateforme (pdm 25%)</P>
+                    Firefox, libre, gratuit et multiplateforme (pdm 10%)</P>
                     <P><A HREF="https://www.google.com/chrome/" target="blank"><IMG SRC="TD-Sites-Web_html_m33457f86.gif" NAME="HTTP://WWW.GOOGLE.COM/CHROME"  ALIGN=LEFT WIDTH=5% BORDER=0></A>Google
                     Chrome (pdm 63%)</P>
                     <p>
