--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -160,21 +160,13 @@
                     à 95% en 2002-2003). Il est aujourd'hui remplacé par Edge (pdm 4%).</P>
                     <P>
                     Une répartition différente sur dispositif mobiles (<A HREF="http://gs.statcounter.com/#mobile_browser-ww-monthly-201112-201112-bar" target="blank">source</A>)</P>
+                    <P/>
                     <P>
-                    <IMG SRC="TD-Sites-Web_html_aac5f3a.png" NAME="images9"  ALIGN=LEFT WIDTH=5% BORDER=0>Android
-                        (pdm 20%)</P>
-                        <P>
-                        <IMG SRC="TD-Sites-Web_html_7f4a7fb5.gif" NAME="images8"  ALIGN=LEFT WIDTH=5% BORDER=0>
-                            Nokia (pdm 13%)</P>
-                            <P>
-                            <A HREF="http://fr.blackberry.com/" target="blank"><IMG SRC="TD-Sites-Web_html_m62c758c3.gif" NAME="HTTP://FR.BLACKBERRY.COM/"  ALIGN=LEFT WIDTH=5% BORDER=0></A>BlackBerry
-                            (pdm 8%)</P>
-                            <P>
-                            <A HREF="http://www.opera.com/mobile/" target="blank"><IMG SRC="TD-Sites-Web_html_6571fb3.gif" NAME="HTTP://WWW.OPERA.COM/MOBILE/"  ALIGN=LEFT WIDTH=5% BORDER=0></A>Opera
-                            (pdm 24%)</P>
+			    <P><A HREF="https://www.google.com/chrome/" target="blank"><IMG SRC="TD-Sites-Web_html_m33457f86.gif" NAME="HTTP://WWW.GOOGLE.COM/CHROME"  ALIGN=LEFT WIDTH=5% BORDER=0></A>Google
+                    Chrome (pdm 56%)</P>
                             <P>
                             <A HREF="http://www.apple.com/fr/safari/" target="blank"><IMG SRC="TD-Sites-Web_html_503981f7.png" NAME="images4"  ALIGN=LEFT WIDTH=5% BORDER=0></A>Apple
-                            safari (pdm 22%)</P>
+                            safari (pdm 18,63%)</P>
                             </div>
 
                 <P>
