--- a/TD-Sites-Web.html
+++ b/TD-Sites-Web.html
@@ -457,7 +457,7 @@
                                 fonctionnalités, la même simplicité, les mêmes usages le même
                                 prix et ils ne sont pas tous très populaires. Le site
                                 <A HREF="http://www.cmsmatrix.org/"  target="blank">http://www.cmsmatrix.org/</A>
-                                permettait d'en tester 1212 le 10 janvier 2012.</P>
+                                permettait d'en tester plus de 1300 début septembre 2018.</P>
                             </div>
 
                             <H1>Weebly</H1>
